2010-05-18  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs:
	* StandardCollectionViewGroup.cs: Fix up how we insert items
	  to the filtered collection when sorting is enabled. In some
	  cases we appear to binary search and insert the item, in
	  others we do a linear search and insert.

2010-05-17  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: Update the IsEmpty property.

2010-05-17  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: Fix the implementation of
	  Contains now that we don't always use the filtered list.

2010-05-13  Alan McGovern  <amcgovern@novell.com>

	* CollectionViewSource.cs:
	* ICollectionViewFactory.cs: Add in the ICollectionViewFactory
	  interface and make CollectionViewSource use it.

2010-05-13  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: When committing a new item we
	  need to check if it passes the filter. If it does not we
	  need to remove it and select the item at the index before
	  it. If it passes the filter we need to sort it into the
	  correct place instead of leaving it at the end of the array
	  if the ICV is in sorting mode.

2010-05-13  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: Raise the CollectionChanged event
	  when adding a new item and add a test on it. Fixes more of
	  232.

2010-05-13  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: Add extra tests to ensure that we
	  emit PropertyChanged events correctly for CurrentItem and
	  CurrentPosition. Both fields need to be updated before any
	  event is raised.

2010-05-12  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: This bit wasn't supposed to be
	  part of my last commit. Fixes the regressions in moon-unit
	  and 232 caused by my last commit.

2010-05-12  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: When we add a new item to the ICV